# mod4play

./: .gitignore  CMakeLists.txt  LICENSE  README.md  m4p.c  m4p.h
.github/workflows/: cmake.yml
example/: CMakeLists.txt  m4player-sapp.c  m4player.c
